2016-03-15, Perry & Jonathan
 Upload initial project
 Fixed the offset code so that the crosshair maintains its monitor position
 Factor settings out of CrosshairSettingsWindow class
  into CrosshairSettingsModel
 Added monitor selection dropdown
 Persist crosshair settings
 Persist settings window placement
 Hide main window from task bar
 Fix assembly properties

2016-03-16, Perry
 New FilledInRed.png (for testing)
 New redblue.png (for testing)
 Set main windows to normal then maximized, to fix centering issue
 Bump version to 1.0.1.0

2016-03-18, Perry
 Add horizontal & vertical scaling dropdowns