@@ -23,6 +23,7 @@
             <ComboBoxItem>100</ComboBoxItem>
             <ComboBoxItem>200</ComboBoxItem>
             <ComboBoxItem>500</ComboBoxItem>
+            <ComboBoxItem>1000</ComboBoxItem>
         </ComboBox>
         <Label Content="V:" HorizontalAlignment="Left" Margin="74,76,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="cboVertScale" HorizontalAlignment="Left" Margin="113,76,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" SelectionChanged="cboVertScale_SelectionChanged">
@@ -31,6 +32,7 @@
             <ComboBoxItem Content="100"/>
             <ComboBoxItem Content="200"/>
             <ComboBoxItem Content="500"/>
+            <ComboBoxItem Content="1000"/>
         </ComboBox>
     </Grid>
 </Window>
