@@ -1,9 +1,9 @@
 ﻿<Window x:Name="wndMain" x:Class="Virtual_Crosshair.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="50" Width="50" ResizeMode="NoResize" Topmost="True"
+        Title="MainWindow" ResizeMode="NoResize" Topmost="True"
         AllowsTransparency="True" WindowStyle="None" Background="{x:Null}" Foreground="{x:Null}" ShowInTaskbar="False">
-    <Grid x:Name="gridMainGrid">
-        <Image x:Name="imgCrosshair" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-    </Grid>
+    <Canvas x:Name="gridMainGrid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <Image x:Name="imgCrosshair" Height="50" Width="50" />
+    </Canvas>
 </Window>
